--- a/example.env
+++ b/example.env
@@ -18,21 +18,17 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
-DB_NAME=abi-bot
+DB_NAME=test-bot
 
 # Aws configuration.
-S3_BUCKET_NAME='abi-dev'
+S3_BUCKET_NAME='test-dev'
 AWS_REGION='AWS_REGION'
 AWS_ACCESS_KEY='AWS_ACCESS_KEY'
 AWS_SECRET_ACCESS_KEY='AWS_SECRET_ACCESS_KEY'
 
-# Whitelist tenant who can access this bot.
-TENANT_SUPPORTED="beroe-inc.com,mindpathtech.com,capgemini.com"
-
-
 #Sendgrid Configuration
 SENDGRID_API_KEY='SENDGRID_API_KEY'
-SENDGRID_SENDER_EMAIL='vikas@mindpathtech.com'
+SENDGRID_SENDER_EMAIL='test@email.com'
 
 # Schedular details to send csat score report.
 CRON_TIMEZONE='Asia/Calcutta'
